--- a/TODO.txt
+++ b/TODO.txt
@@ -2,11 +2,13 @@
 [X] Add show hint
 [X] Add win state for puzzles
 [X] Add quit
-[ ] Add timer
-[ ] Add completion percent
-[ ] Add finish statistics
-[ ] Add sort by difficulty
+[X] Add timer
+[X] Add completion percent
+[X] Add sort by difficulty
 [ ] Add permently solved 
 [ ] Add score
+[ ] Add finish statistics
 [ ] Add profile
+[ ] Add leaderboard
+[ ] Add collab
 [ ] Add different puzzles
